fix: overflow-x issue in header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .headerAppContainer {
   padding-top: 20px;
-  width: 100vw;
+  /* width: 100vw; */
+  width: 100%;
 }
 
 .headerAppContainerHomePage {
